PA3/cool.output
State 128 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: /* empty */
    8             | feature_list feature

    9 feature: OBJECTID ':' TYPEID ';'
   10        | OBJECTID ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID '(' error ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' error '}' ';'
   14        | error '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

   15 formal_list: /* empty */
   16            | formal
   17            | formal_list ',' formal

   18 formal: OBJECTID ':' TYPEID

   19 expression: OBJECTID ASSIGN expression
   20           | expression '.' OBJECTID '(' expression_list_dispatch ')'
   21           | OBJECTID '(' expression_list_dispatch ')'
   22           | expression '@' TYPEID '.' OBJECTID '(' expression_list_dispatch ')'
   23           | IF expression THEN expression ELSE expression FI
   24           | WHILE expression LOOP expression POOL
   25           | '{' expression ';' expression_list_block '}'
   26           | LET let let_list IN expression
   27           | CASE expression OF case_list ESAC
   28           | NEW TYPEID
   29           | ISVOID expression
   30           | expression '+' expression
   31           | expression '-' expression
   32           | expression '*' expression
   33           | expression '/' expression
   34           | '~' expression
   35           | expression '<' expression
   36           | expression '=' expression
   37           | expression LE expression
   38           | NOT expression
   39           | '(' expression ')'
   40           | OBJECTID
   41           | INT_CONST
   42           | BOOL_CONST
   43           | STR_CONST

   44 expression_list_dispatch: /* empty */
   45                         | expression
   46                         | expression_list_dispatch ',' expression
   47                         | expression_list_dispatch ',' error

   48 expression_list_block: /* empty */
   49                      | expression ';' expression_list_block
   50                      | error ';' expression_list_block

   51 case_list: /* empty */
   52          | case_list case

   53 case: OBJECTID ':' TYPEID DARROW expression ';'

   54 let_list: /* empty */
   55         | ',' let let_list

   56 let: OBJECTID ':' TYPEID
   57    | OBJECTID ':' TYPEID ASSIGN expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 12 13 14 20 21 22 39
')' (41) 11 12 13 14 20 21 22 39
'*' (42) 32
'+' (43) 30
',' (44) 17 46 47 55
'-' (45) 31
'.' (46) 20 22
'/' (47) 33
':' (58) 9 10 11 12 13 14 18 53 56 57
';' (59) 5 6 9 10 11 12 13 14 25 49 50 53
'<' (60) 35
'=' (61) 36
'@' (64) 22
'{' (123) 5 6 11 12 13 14 25
'}' (125) 5 6 11 12 13 14 25
'~' (126) 34
error (256) 4 12 13 14 47 50
CLASS (258) 5 6
ELSE (259) 23
FI (260) 23
IF (261) 23
IN (262) 26
INHERITS (263) 6
LET (264) 26
LOOP (265) 24
POOL (266) 24
THEN (267) 23
WHILE (268) 24
CASE (269) 27
ESAC (270) 27
OF (271) 27
DARROW (272) 53
NEW (273) 28
ISVOID (274) 29
STR_CONST (275) 43
INT_CONST (276) 41
BOOL_CONST (277) 42
TYPEID (278) 5 6 9 10 11 12 13 14 18 22 28 53 56 57
OBJECTID (279) 9 10 11 12 13 18 19 20 21 22 40 53 56 57
ASSIGN (280) 10 19 57
NOT (281) 38
LE (282) 37


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
class_list (46)
    on left: 2 3 4, on right: 1 3 4
class (47)
    on left: 5 6, on right: 2 3
feature_list (48)
    on left: 7 8, on right: 5 6 8
feature (49)
    on left: 9 10 11 12 13 14, on right: 8
formal_list (50)
    on left: 15 16 17, on right: 11 13 14 17
formal (51)
    on left: 18, on right: 16 17
expression (52)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43, on right: 10 11 12 14 19 20 22 23 24 25 26
    27 29 30 31 32 33 34 35 36 37 38 39 45 46 49 53 57
expression_list_dispatch (53)
    on left: 44 45 46 47, on right: 20 21 22 46 47
expression_list_block (54)
    on left: 48 49 50, on right: 25 49 50
case_list (55)
    on left: 51 52, on right: 27 52
case (56)
    on left: 53, on right: 52
let_list (57)
    on left: 54 55, on right: 26 55
let (58)
    on left: 56 57, on right: 26 55


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class
    4           | class_list . error

    error  shift, and go to state 7
    CLASS  shift, and go to state 1

    $end  reduce using rule 1 (program)

    class  go to state 8


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 6

    0 $accept: program $end .

    $default  accept


state 7

    4 class_list: class_list error .

    $default  reduce using rule 4 (class_list)


state 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 9

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


state 10

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 12


state 11

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 13


state 12

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 16

    feature  go to state 17


state 13

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 18


state 14

   14 feature: error . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

    '('  shift, and go to state 19


state 15

    9 feature: OBJECTID . ':' TYPEID ';'
   10        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID . '(' error ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 20
    '('  shift, and go to state 21


state 16

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 22


state 17

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


state 18

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 23

    feature  go to state 17


state 19

   14 feature: error '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 24

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 25
    formal       go to state 26


state 20

    9 feature: OBJECTID ':' . TYPEID ';'
   10        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 27


state 21

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID '(' . error ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' error '}' ';'

    error     shift, and go to state 28
    OBJECTID  shift, and go to state 24

    ')'  reduce using rule 15 (formal_list)
    ','  reduce using rule 15 (formal_list)

    formal_list  go to state 29
    formal       go to state 26


state 22

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 23

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


state 24

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


state 25

   14 feature: error '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   17 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 32
    ','  shift, and go to state 33


state 26

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


state 27

    9 feature: OBJECTID ':' TYPEID . ';'
   10        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 34
    ';'     shift, and go to state 35


state 28

   12 feature: OBJECTID '(' error . ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift, and go to state 36


state 29

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID '(' formal_list . ')' ':' TYPEID '{' error '}' ';'
   17 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 37
    ','  shift, and go to state 33


state 30

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 31

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


state 32

   14 feature: error '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 39


state 33

   17 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 24

    formal  go to state 40


state 34

   10 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 55


state 35

    9 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 9 (feature)


state 36

   12 feature: OBJECTID '(' error ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 56


state 37

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID '(' formal_list ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 57


state 38

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


state 39

   14 feature: error '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 58


state 40

   17 formal_list: formal_list ',' formal .

    $default  reduce using rule 17 (formal_list)


state 41

   23 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 59


state 42

   26 expression: LET . let let_list IN expression

    OBJECTID  shift, and go to state 60

    let  go to state 61


state 43

   24 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 62


state 44

   27 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 63


state 45

   28 expression: NEW . TYPEID

    TYPEID  shift, and go to state 64


state 46

   29 expression: ISVOID . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 65


state 47

   43 expression: STR_CONST .

    $default  reduce using rule 43 (expression)


state 48

   41 expression: INT_CONST .

    $default  reduce using rule 41 (expression)


state 49

   42 expression: BOOL_CONST .

    $default  reduce using rule 42 (expression)


state 50

   19 expression: OBJECTID . ASSIGN expression
   21           | OBJECTID . '(' expression_list_dispatch ')'
   40           | OBJECTID .

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 40 (expression)


state 51

   38 expression: NOT . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 68


state 52

   34 expression: '~' . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 69


state 53

   25 expression: '{' . expression ';' expression_list_block '}'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 70


state 54

   39 expression: '(' . expression ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 71


state 55

   10 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   20 expression: expression . '.' OBJECTID '(' expression_list_dispatch ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_dispatch ')'
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '=' expression
   37           | expression . LE expression

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '-'  shift, and go to state 75
    '+'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 81


state 56

   12 feature: OBJECTID '(' error ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 82


state 57

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'
   13        | OBJECTID '(' formal_list ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 83


state 58

   14 feature: error '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 84


state 59

   20 expression: expression . '.' OBJECTID '(' expression_list_dispatch ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_dispatch ')'
   23           | IF expression . THEN expression ELSE expression FI
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '=' expression
   37           | expression . LE expression

    THEN  shift, and go to state 85
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '-'   shift, and go to state 75
    '+'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


state 60

   56 let: OBJECTID . ':' TYPEID
   57    | OBJECTID . ':' TYPEID ASSIGN expression

    ':'  shift, and go to state 86


state 61

   26 expression: LET let . let_list IN expression

    ','  shift, and go to state 87

    $default  reduce using rule 54 (let_list)

    let_list  go to state 88


state 62

   20 expression: expression . '.' OBJECTID '(' expression_list_dispatch ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_dispatch ')'
   24           | WHILE expression . LOOP expression POOL
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '=' expression
   37           | expression . LE expression

    LOOP  shift, and go to state 89
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '-'   shift, and go to state 75
    '+'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


state 63

   20 expression: expression . '.' OBJECTID '(' expression_list_dispatch ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_dispatch ')'
   27           | CASE expression . OF case_list ESAC
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '=' expression
   37           | expression . LE expression

    OF   shift, and go to state 90
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '-'  shift, and go to state 75
    '+'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


state 64

   28 expression: NEW TYPEID .

    $default  reduce using rule 28 (expression)


state 65

   20 expression: expression . '.' OBJECTID '(' expression_list_dispatch ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_dispatch ')'
   29           | ISVOID expression .
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '=' expression
   37           | expression . LE expression

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 29 (expression)


state 66

   19 expression: OBJECTID ASSIGN . expression
